fix: display org info above the course title

--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -62,6 +62,7 @@ from openedx.core.lib.courses import course_image_url
       <div class="table">
       <section class="intro">
         <div class="heading-group">
+          <p><small>${course.display_org_with_default}</small></p>
           <h1>${course.display_name_with_default}</h1>
           <br />
           <p>${get_course_about_section(request, course, 'short_description')}</p>
@@ -158,11 +159,6 @@ from openedx.core.lib.courses import course_image_url
 
         <%block name="course_about_important_dates">
         <ol class="important-dates">
-          <li class="important-dates-item">
-              <span class="icon fa fa-building" aria-hidden="true"></span>
-              <p class="important-dates-item-title">${_("Organization")}</p>
-              <span class="important-dates-item-text course-org">${course.display_org_with_default}</span>
-          </li>
           <li class="important-dates-item">
               <span class="icon fa fa-info-circle" aria-hidden="true"></span>
               <p class="important-dates-item-title">${_("Course Number")}</p>
